--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,5 @@ VITE_APP_ENV = 'development'
 # 开发环境
 VITE_APP_BASE_API = '/api'
 BASE_URL=""
-# VITE_APP_CONFIG_WEBSOCKET = 'ws://www.gxynai.cn/ws/sensor'
-VITE_APP_CONFIG_WEBSOCKET = 'ws://localhost:8081/ws/sensor'
+VITE_APP_CONFIG_WEBSOCKET = 'ws://www.gxynai.cn/ws/sensor'
+# VITE_APP_CONFIG_WEBSOCKET = 'ws://localhost:8081/ws/sensor'
