--- a/.env.production
+++ b/.env.production
@@ -4,5 +4,5 @@ VITE_APP_ENV = 'production'
 # 生产环境
 VITE_APP_BASE_API = '/api'
 
-# VITE_APP_CONFIG_WEBSOCKET = 'wss://www.gxynai.cn/ws/sensor'
-VITE_APP_CONFIG_WEBSOCKET = 'wss://localhost:8081/ws/sensor'
+VITE_APP_CONFIG_WEBSOCKET = 'wss://www.gxynai.cn/ws/sensor'
+# VITE_APP_CONFIG_WEBSOCKET = 'wss://localhost:8081/ws/sensor'
